--- a/assets/typographys.css
+++ b/assets/typographys.css
@@ -73,7 +73,6 @@ button, .btn-secondary {
   line-height: 16px;
   transition: 0.2s;
 }
-
 button:hover, .btn-secondary:hover {
   background-color: transparent;
   border-color: #F2F2F2;
@@ -158,360 +157,25 @@ button:hover, .btn-secondary:hover {
 
   h3 {
     font-size: 1.3vw;
+    font-weight: 400;
   }
 
   a {
-    font-size: 1.3vw;
+    font-size: 1vw;
   }
 
   p {
     font-size: 1vw;
+    font-weight: 300;
   }
 
   li {
-    font-size: 1.3vw;
+    font-size: 1vw;
   }
 
   button, .btn-secondary {
     font-size: 1vw;
   }
 }
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
-/*# sourceMappingURL=typographys.css.map */
 
 /*# sourceMappingURL=typographys.css.map */
