--- a/assets/typographys.scss
+++ b/assets/typographys.scss
@@ -170,18 +170,20 @@ button, .btn-secondary {
 
   h3 {
     font-size: 1.3vw;
+    font-weight: 400;
   }
 
   a {
-    font-size: 1.3vw;
+    font-size: 1vw;
   }
 
   p {
     font-size: 1vw;
+    font-weight: 300;
   }
 
   li {
-    font-size: 1.3vw;
+    font-size: 1vw;
   }
 
   button, .btn-secondary {
