--- a/assets/style.css
+++ b/assets/style.css
@@ -68,7 +68,7 @@
 }
 
 h1 {
-  font-size: 4.083vw;
+  font-size: 4vw;
   font-style: normal;
   font-weight: normal;
   line-height: 139.69%;
@@ -78,7 +78,7 @@ h1 {
 h2 {
   font-style: normal;
   font-weight: bold;
-  font-size: 3.823vw;
+  font-size: 3.8vw;
   line-height: 41px;
   color: #20A2EC;
   text-transform: uppercase;
@@ -292,6 +292,7 @@ section .bg-primary li:before {
 
 .btn button {
   background-color: #20A2EC;
+  border: 2px solid #20A2EC;
   color: #fff;
 }
 .btn button:hover {
