--- a/assets/style.scss
+++ b/assets/style.scss
@@ -40,11 +40,6 @@ section {
   background-color: $main_color !important;
   color: white;
 }
-#about, #functions{
-  padding: 70px auto;
-  margin: 50px auto;
-
-}
 
 section {
   ul {
@@ -208,8 +203,9 @@ section {
   }
 
   h3 {
-    padding: 60px 0;
-    margin: 60px 0;
+    padding: 30px 0;
+    padding-bottom: 0;
+    margin: 30px 0;
     color: $main_color;
     text-transform: uppercase;
   }
