--- a/assets/style.css
+++ b/assets/style.css
@@ -95,6 +95,7 @@ a {
   font-style: normal;
   font-weight: 500;
   font-size: 3.4vw;
+  color: #20A2EC;
 }
 
 p {
@@ -545,7 +546,7 @@ section .bg-primary li:before {
 }
 
 .text-primary {
-  color: #20A2EC;
+  color: #20A2EC !important;
 }
 
 .border-primary {
