--- a/assets/style.scss
+++ b/assets/style.scss
@@ -581,3 +581,15 @@ button .border-primary:hover {
 .slick-arrow.slick-hidden {
   display: none;
 }
+
+.popover-body {
+  font-size: 16px;
+}
+
+.lead {
+  font-size: 1.5rem;
+}
+
+#functions li {
+  font-size: 1.2vw;
+}
