--- a/assets/typographys.css
+++ b/assets/typographys.css
@@ -11,6 +11,14 @@
   border-color: #20A2EC;
 }
 
+.btn-primary:hover {
+  background-color: #086295;
+  border-color: #086295;
+}
+.btn-primary:hover a {
+  text-decoration: none;
+}
+
 h1 {
   font-size: 4vw;
   font-style: normal;
