--- a/assets/style.scss
+++ b/assets/style.scss
@@ -411,7 +411,9 @@ button .border-primary:hover {
   width: 100%;
   height: auto;
 }
-
+.navbar{
+  padding-top: 30px;
+}
 #navbarResponsive a {
   color: $grey;
 
