--- a/assets/typographys.css
+++ b/assets/typographys.css
@@ -54,7 +54,7 @@ p {
   font-style: normal;
   font-weight: 400;
   font-size: 3.4vw;
-  line-height: 25px;
+  line-height: 30px;
 }
 
 li {
@@ -88,8 +88,19 @@ button:hover, .btn-secondary:hover {
   color: #20A2EC;
 }
 
-.btn-secondary:hover {
-  background-color: transparent;
+.container .btn-secondary a {
+  color: white;
+}
+
+.container .btn-secondary:before {
+  transition: 0.2s;
+}
+
+.container .btn-secondary:hover {
+  background-color: #fff;
+}
+.container .btn-secondary:hover a {
+  color: #20A2EC;
 }
 
 .dropdown-toggle {
